k8s/nginx-protected/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: automation
  name: nginx-protected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-protected
  template:
    metadata:
      labels:
        app: nginx-protected
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
