k8s/nginx-protected/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: automation
  name: nginx-protected
spec:
  type: NodePort
  selector:
    app: nginx-protected
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
