k8s/nginx-protected/nginx-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: automation
  name: allow-vpn-only
spec:
  podSelector:
    matchLabels:
      app: nginx-protected
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.8.0.0/24
